<resources>
    <!--App Name-->
    <string name="app_name">CooKit</string>

    <!--Login-->
    <string name="login_username">Username</string>
    <string name="login_password">Password</string>
    <string name="login_login">Login</string>
    <string name="login_sign_up">Sign up</string>
    <!--SingIn-->
    <string name="sign_in_username">Username</string>
    <string name="sign_in_name">Name</string>
    <string name="sign_in_lastname">Last name</string>
    <string name="sign_in_email">E-mail</string>
    <string name="sign_in_password">Password</string>
    <string name="sign_in_confirmpassword">Confirm password</string>
    <string name="sign_in_next">Next</string>

    <!--Home-->
    <string name="home_home">Home</string>
    <string name="title_activity_main">CooKit</string>
    <string name="title_home">Home</string>
    <string name="title_explore">Explore</string>
    <string name="title_favourites">Favourites</string>
    <string name="title_new">New</string>
    <string name="title_activity_aaaa">aaaa</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>

    <!--UsrMenu-->
    <string name="profile">Profile</string>
    <string name="orders">Orders</string>
    <string name="logout">Logout</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_gmaps">Map</string>
    <string name="title_activity_maps">Map</string>

    <!--Categories-->

    <!--Ingredients-->

</resources>
