<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_background">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="40dp"
        android:paddingRight="40dp"
        android:background="@drawable/white_transparent_bg"
        android:gravity="center"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="10dp">

            <ImageView
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:background="@drawable/round_icon"
                android:scaleType="fitXY"
                android:src="@drawable/user_icon" />

            <EditText
                android:id="@+id/et_name"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:background="@drawable/e_text_bg"
                android:hint="@string/sign_in_name"
                android:maxLines="1"
                android:paddingHorizontal="10dp"
                android:singleLine="true" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="10dp">

            <ImageView
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:background="@drawable/round_icon"
                android:scaleType="fitXY"
                android:src="@drawable/user_icon" />

            <EditText
                android:id="@+id/et_last_name"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:background="@drawable/e_text_bg"
                android:hint="@string/sign_in_lastname"
                android:maxLines="1"
                android:paddingHorizontal="10dp"
                android:singleLine="true" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="10dp">

            <ImageView
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:background="@drawable/round_icon"
                android:scaleType="fitXY"
                android:src="@drawable/email_icon" />

            <EditText
                android:id="@+id/et_email"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:background="@drawable/e_text_bg"
                android:hint="@string/sign_in_email"
                android:inputType="textEmailAddress"
                android:paddingHorizontal="10dp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="10dp">

            <ImageView
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:background="@drawable/round_icon"
                android:scaleType="fitXY"
                android:src="@drawable/password_logo" />

            <EditText
                android:id="@+id/et_password"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:background="@drawable/e_text_bg"
                android:hint="@string/sign_in_password"
                android:inputType="textPassword"
                android:paddingHorizontal="10dp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="10dp">

            <ImageView
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:background="@drawable/round_icon"
                android:scaleType="fitXY"
                android:src="@drawable/password_logo" />

            <EditText
                android:id="@+id/et_cpassword"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:background="@drawable/e_text_bg"
                android:hint="@string/sign_in_confirmpassword"
                android:inputType="textPassword"
                android:paddingHorizontal="10dp" />

        </LinearLayout>

        <Button
            android:id="@+id/btn_next"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:background="@drawable/botones"
            android:text="@string/sign_in_next"
            android:textAllCaps="false" />

    </LinearLayout>

</RelativeLayout>