<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_background">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingLeft="40dp"
        android:paddingRight="40dp"
        android:background="@drawable/white_transparent_bg">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:background="@drawable/round_icon"
                android:scaleType="fitXY"
                android:src="@drawable/user_icon" />

            <EditText
                android:id="@+id/et_usr"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:background="@drawable/e_text_bg"
                android:hint="@string/login_username"
                android:inputType="textEmailAddress"
                android:paddingHorizontal="10dp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="10dp">

            <ImageView
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:background="@drawable/round_icon"
                android:scaleType="fitXY"
                android:src="@drawable/password_logo" />

            <EditText
                android:id="@+id/et_pass"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:background="@drawable/e_text_bg"
                android:hint="@string/login_password"
                android:inputType="textPassword"
                android:paddingHorizontal="10dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Button
                android:id="@+id/btn_login"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginVertical="10dp"
                android:background="@drawable/botones"
                android:text="@string/login_login"
                android:textAllCaps="false" />

            <Button
                android:id="@+id/btn_sign_in"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/botones"
                android:text="@string/login_sign_up"
                android:textAllCaps="false"/>

            <com.google.android.gms.common.SignInButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="10dp"
                android:id="@+id/google_sign_in">
            </com.google.android.gms.common.SignInButton>

        </LinearLayout>

    </LinearLayout>


</RelativeLayout>